--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Generate Password.</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <div class="container">
+        <div class="output">ads5ad15sad4</div>
+        <button class="input-button">GENERATE PASSWORD</button>
+    </div>
     
     <script src="./script.js"></script>
 </body>
