--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="output">ads5ad15sad4</div>
+        <div class="output">...........</div>
         <button class="input-button">GENERATE PASSWORD</button>
     </div>
     
