--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
     <!-- ALL THE COPIED PASSWORDS -->
     <div class="all-the-copied-passwords-container">
         <div class="all-the-copied-passwords-container-top">
-            <button>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
-                    <circle cx="3" cy="3" r="3" transform="matrix(4.37114e-08 -1 -1 -4.37114e-08 15.0002 21.9999)" stroke="currentColor" stroke-width="1.5" />
-                    <path d="M12.0006 1.99988L12.0006 11.9999M12.0006 1.99988C11.4386 1.99988 11.0113 2.43798 10.1569 3.31418L8.50049 4.97045M12.0006 1.99988C12.5627 1.99988 12.9899 2.43798 13.8444 3.31418L15.5005 4.97032" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            <button class="all-the-copied-passwords-container-top-button">
+                <svg class="all-the-copied-passwords-container-top-button-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
+                    <path d="M12 4L12 20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M16.9998 8.99996C16.9998 8.99996 13.3174 4.00001 11.9998 4C10.6822 3.99999 6.99982 9 6.99982 9" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
             </button>
+            <p class="all-the-copied-passwords-container-top-text">ALL THE COPIED PASSWORDS</p>
         </div>
         <div class="all-the-copied-passwords-container-bottom"></div>
     </div>
